# sshRC

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-release-version.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_connection_saved_password.sql
src-tauri/src/: database.rs  error.rs  lib.rs  main.rs  models.rs  private_key.rs  ssh.rs  state.rs
src-tauri/src/commands/: connections.rs  data_portability.rs  keys.rs  mod.rs  release.rs  sftp.rs  terminal.rs
src/app/: App.tsx
src/app/components/: DesignSelect.tsx  Layout.tsx  NewConnectionModal.tsx
src/app/components/pages/: Connections.tsx  Dashboard.tsx  FileManager.tsx  KeyManagement.tsx  Settings.tsx  Terminal.tsx
src/app/lib/: api.ts  i18n.tsx  mock.ts  settings.ts  sync.ts  types.ts
src/styles/: fonts.css  index.css  theme.css
