[package]
name = "sshcr"
version = "0.1.0"
description = "Cross-platform SSH and SFTP client"
authors = ["sshRC contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/ctexthuang/sshRC"
edition = "2021"

[lib]
name = "sshcr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ring = "0.17"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid"] }
ssh2 = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
